--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "start": "rollup -c -w"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/F3MDEV/aside-configuration.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,16 +26,29 @@
   },
   "homepage": "https://github.com/F3MDEV/aside-configuration#readme",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@types/node": "^16.11.5",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rollup": "^2.58.3",
+    "rollup-plugin-sass": "^1.2.9",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.0.4",
+    "@mui/material": "^5.0.4",
     "bootstrap": "^4.6.0",
-    "react-bootstrap": "^1.6.4"
+    "react-bootstrap": "^1.6.4",
+    "react-icomoon": "^2.4.1",
+    "typeface-roboto-condensed": "^1.1.13"
   }
 }
